examples/test/testpolicy12775.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12775
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key37: value22
      key22: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value26
          key14: value47
          key47: value14
      podSelector:
        matchLabels:
          key26: value24
          key41: value25
